# rust-sitemap-time

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  reader.rs  structs.rs  writer.rs
tests/: test_read_sitemap.rs  test_write_sitemap.rs
