[package]
name = "sitemap"
version = "0.4.1"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>", "tglman <https://github.com/tglman>", "John Boehr <jbboehr@gmail.com>", "Brady <https://github.com/BradyMcd>", "RaZeR-RBI <vilkov.adel@gmail.com>"]
description = "Sitemap parser (reader) and writer"
keywords=["sitemap","parser","reader","parse"]
readme="README.md"
repository = "https://github.com/svmk/rust-sitemap"
license="MIT"
edition = "2018"

[dependencies]
xml-rs=">=0.3"
url="2"
time = { version = "0.3.5", features = ["formatting", "parsing", "macros"] }
